syntax = "proto3";
option  java_multiple_files = true;

package com.grpc.account.stubs;

// Update the go_package option to match your module name and directory structure
option go_package = "../account";

service AccountService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  int32 expiredIn = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string fullname = 3;
}

message RegisterResponse {
  string username = 1;
  string fullname = 2;
}
